testsuite/bsc.names/portRenaming/invalidAttrs/port/Empty.bsv

interface Ifc;
 method Action check ((* port="" *)Bool x);
endinterface

